--- a/src/app/features/todos-redux/components/list/list.component.html
+++ b/src/app/features/todos-redux/components/list/list.component.html
@@ -4,3 +4,10 @@
     {{item.description}}
   </li>
 </ul>
+
+<!-- <ul class="list-unstyled">
+  <li class="alert alert-info"
+      *ngFor="let item of list">
+    {{item.description}}
+  </li>
+</ul> -->
